--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ html, body {
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
-    font-family: 'Numans', sans-serif;
+    /* font-family: 'Numans', sans-serif; */
 }
 
 .bgDoctor
