-Completed Task : 1. Display data for Doctor Dashboard 2. Count the Total appointments, Upcoming appointments,  Total patients and today's appointment in API  3. Join the link in the database  4. Send the Email to patient on the cancellation of meeting 5. Time slot bug.

--- a/src/Patient/Meeting.css
+++ b/src/Patient/Meeting.css
@@ -1,7 +1,8 @@
-/* .container {
+.container_main {
   display: grid;
   height: 500px;
   grid-template-columns: 7fr 3fr;
+  margin: 20px;
 }
 .vcontainer {
   left: 0;
@@ -32,7 +33,7 @@
   left: 0;
   right: 0;
   z-index: 10000;
-  background: rgb(0, 0, 0); /* Fallback color 
+  background: rgb(0, 0, 0); /* Fallback color */
   background: rgba(0, 0, 0, 0.5);
   margin-top: 50px;
   display: grid;
@@ -43,7 +44,7 @@
 .callButton {
   margin-top: 10px;
 }
-body {
+/* body {
   position: fixed;
   background-image: url("../assests/image/bg_doc.jpg");
 } */
